@@ -1,6 +1,13 @@
+2006-04-04  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/python.py: Get rid of GObject stuff in base classes, move 
+	it to kiwi utils
+	* kiwi/utils.py: inline class initiable meta here 
+
 2006-03-30  Johan Dahlin  <jdahlin@async.com.br>
 
-	* kiwi/ui/dateentry.py (DateEntry.__init__): Only set the mask if it's not empty
+	* kiwi/ui/dateentry.py (DateEntry.__init__): 
+	Only set the mask if it's not empty
 
 	* kiwi/ui/widgets/entry.py (ProxyEntry.set_mask_for_data_type): 
 	Instead of skipping, try to do an educated guess of the mask.
@@ -9,8 +16,9 @@
 
 	reviewed by: jdahlin
 
-	* kiwi/ui/proxywidget.py: update the validation error tooltip every time
-	the value changes (for tooltips that containg the invalid value)
+	* kiwi/ui/proxywidget.py: update the validation error tooltip 
+	every time the value changes (for tooltips that containg the 
+	invalid value)
 	* po/kiwi.pot:
 	* po/pt_BR.po: new translations
 	* po/sv.po:
